ubuntu/custom/nodejs/18.6.0/10c09506-e506-461d-82d6-30a8b88c6b08/_usr_bin_node.strace.stderr
[stdin]:1
/usr/bin/node
^

SyntaxError: Invalid regular expression flags
    at new Script (node:vm:100:7)
    at createScript (node:vm:265:10)
    at Object.runInThisContext (node:vm:313:10)
    at node:internal/process/execution:76:19
    at [stdin]-wrapper:6:22
    at evalScript (node:internal/process/execution:75:60)
    at node:internal/main/eval_stdin:29:5
    at ReadStream.<anonymous> (node:internal/process/execution:213:5)
    at ReadStream.emit (node:events:513:28)
    at endReadableNT (node:internal/streams/readable:1359:12)

Node.js v18.6.0
